переделал заголовок и подзаголовок в блоке intro. Они теперь универсальны

--- a/blocks/__subtitle/section__subtitle-flex.css
+++ b/blocks/__subtitle/section__subtitle-flex.css
@@ -1,6 +1,5 @@
-.intro__subtitle {
+.section__subtitle-flex {
   font-size: 36px;
-  max-width: 574px;
   width: 100%;
   font-weight: 500;
   margin: 0;
