--- a/blocks/form/__input/_large/form__input_large.css
+++ b/blocks/form/__input/_large/form__input_large.css
@@ -1,8 +1,9 @@
-.form__imput_large {
-  margin: 30px auto 0 70px;
+.form__input_large {
+  margin: 20px auto 0 70px;
   width: 350px;
   height: 100px;
   line-height: 27px;
+  resize: none;
 }
 
 .form__input_large::-webkit-input-placeholder {color: black;}
