--- a/pages/index.css
+++ b/pages/index.css
@@ -24,8 +24,30 @@
 
 
 @import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text-container.css);
+@import url(../blocks/intro/__subtitle/intro__subtitle.css);
 @import url(../blocks/intro/__image/intro__image.css);
+
+@import url(../blocks/grid-box/grid-box.css);
+@import url(../blocks/grid-box/__image/grid-box__image.css);
+@import url(../blocks/grid-box/__content/grid-box__content.css);
+@import url(../blocks/grid-box/_inverse/grid-box_inverse_content.css);
+@import url(../blocks/grid-box/_inverse/grid-box_inverse_image.css);
+@import url(../blocks/grid-box/__title/grid-box__title.css);
+@import url(../blocks/grid-box/__paragraph/grid-box__paragraph.css);
+@import url(../blocks/grid-box/__pic/grid-box__pic.css);
+
+@import url(../blocks/talk-travel/talk-travel.css);
+@import url(../blocks/talk-travel/__title/talk-travel__title.css);
+@import url(../blocks/talk-travel/__subtitle/talk-travel__subtitle.css);
+
+@import url(../blocks/flex-box/flex-box.css);
+@import url(../blocks/flex-box/__item/flex-box__item.css);
+@import url(../blocks/flex-box/__title/flex-box__title.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__title/footer__title.css);
 
 
 @import url(../blocks/form/form.css);
@@ -33,5 +55,10 @@
 @import url(../blocks/form/__left-side/form__left-side.css);
 @import url(../blocks/form/__title/form__title.css);
 @import url(../blocks/form/__input/form__input.css);
-@import url(../blocks/form/__input/_large/form__imput_large.css);
+@import url(../blocks/form/__input/_large/form__input_large.css);
 @import url(../blocks/form/__input/_small/form__input_small.css);
+@import url(../blocks/form/__button/form__button.css);
+
+
+@import url(../blocks/haden-daden/haden-daden.css);
+@import url(../blocks/haden-daden/__video/haden-daden__video.css);
