--- a/blocks/grid-area/grid-area.css
+++ b/blocks/grid-area/grid-area.css
@@ -1,12 +1,11 @@
 .grid-area {
+    max-width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, 697px);
+    grid-template-columns: repeat(auto-fit, 50%);
 }
 
 @media screen and (max-width: 1023px) {
     .grid-area {
         grid-template-columns: repeat(auto-fit, 398px);
     }
-}
-
 }
