страница сверстана. пока без медиазапросов

--- a/blocks/flex-box/__title/flex-box__title.css
+++ b/blocks/flex-box/__title/flex-box__title.css
@@ -1,4 +1,6 @@
 .flex-box__title {
-    text-transform: uppercase;
-    margin:0;
+  text-transform: uppercase;
+  margin: 0;
+  font-size: 13px;
+  letter-spacing: -1px;
 }
