--- a/blocks/footer/__title/footer__title.css
+++ b/blocks/footer/__title/footer__title.css
@@ -1,7 +1,8 @@
 .footer__title {
     text-transform: uppercase;
-    font-size: 32px;
+    font-size: 36px;
     font-weight: bolder;
     text-align: center;
-    padding-top:317px;
+    margin: 0;
+    padding: 284px;
 }
