--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,8 @@
 .footer {
     background-color:#fecda7;
-    min-height: 675px;
-    max-height: 100%;
+    min-height: 620px;
+    height: 100%;
+    max-width: 1280px;
+    width: 100%;
+    margin-top: -3px;
 }
