--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -6,5 +6,12 @@
   width: 205px;
   margin: 15px auto 0 auto;
   font-size: inherit;
-  padding: 0;
+  padding-left: 0;
+  letter-spacing: -1px;
+  transition: opacity .3s linear;
+  border-radius: 5px;
+}
+
+.form__button:hover {
+  opacity: 0.7;
 }
