--- a/blocks/grid-area/grid-area.css
+++ b/blocks/grid-area/grid-area.css
@@ -1,6 +1,6 @@
 .grid-area {
     display: grid;
-    grid-template-columns: repeat(auto-fit, 697px);
+    grid-template-columns: repeat(2, 1fr);
 }
 
 @media screen and (max-width: 1023px) {
