--- a/blocks/grid-box/__content/grid-box__content.css
+++ b/blocks/grid-box/__content/grid-box__content.css
@@ -1,12 +1,15 @@
 .grid-box__content {
-    max-width: 386px;
-    margin-left: 80px;
-    align-self: start;
+  max-width: 386px;
+  margin-left: 70px;
+  height: 100%;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 767px) {
-    .grid-box__content {
-        margin: 10px auto;
-    }
+  .grid-box__content {
+      margin: 10px auto;
+  }
 }
 
