--- a/blocks/grid-box/__paragraph/grid-box__paragraph.css
+++ b/blocks/grid-box/__paragraph/grid-box__paragraph.css
@@ -1,11 +1,12 @@
 .grid-box__paragraph {
     font-size: 14px;
     margin:0;
-    margin-bottom: 33px;
+    margin-bottom: 26px;
+    line-height: 21px;
 }
 
-.grid-box__paragraph:last-child {
-    margin:0;
+.grid-box__paragraph:nth-last-child(1) {
+    margin-bottom: 85px;
 }
 
 @media screen and (max-width: 767px) {
