--- a/blocks/grid-box/__title/grid-box__title.css
+++ b/blocks/grid-box/__title/grid-box__title.css
@@ -1,8 +1,7 @@
 .grid-box__title {
-    font-size: 21px;
-    margin:0;
-    margin-top:75px;
-    margin-bottom: 215px;
+  font-size: 35px;
+  margin: 57px auto 0 0;
+  letter-spacing: -1px;
 }
 
 @media screen and (max-width: 767px) {
