--- a/blocks/talk-travel/talk-travel.css
+++ b/blocks/talk-travel/talk-travel.css
@@ -1,6 +1,3 @@
 .talk-travel {
-    margin:0 auto;
-    padding-top:145px;
-    margin-bottom: 158px;
-    margin-left: 77px;
+    margin: 133px auto 127px 66px;
 }
