--- a/blocks/grid-box/__image/grid-box__image.css
+++ b/blocks/grid-box/__image/grid-box__image.css
@@ -6,4 +6,38 @@
   height: fit-content;
   object-fit: cover;
 }
+@media screen and (max-width: 1279px) {
+  .grid-box__image {
+    margin: 0;
+    align-self: center;
+    max-width: 535px;
+    max-height: 535px;
+    object-fit: cover;
+  }
+  .grid-box__image:nth-of-type(1) {
+    margin-top: 0;
+  }
+}
 
+@media screen and (max-width: 1023px) {
+  .grid-box__image {
+    align-self: center;
+    max-width: 430px;
+    max-height: 430px;
+    object-fit: cover;
+  }
+  .grid-box__image:nth-of-type(1) {
+    margin-top: 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  .grid-box__image {
+    align-self: center;
+    max-width: 360px;
+    max-height: 360px;
+    min-height: 320px;
+    min-height: 320px;
+    object-fit: cover;
+    margin: 0 auto 10px auto;
+  }
+}
