--- a/blocks/header/__link/_complain/header__link_complain.css
+++ b/blocks/header/__link/_complain/header__link_complain.css
@@ -1,3 +1,10 @@
 .header__link_complain {
   align-self: flex-end;
 }
+
+@media screen and (max-width: 767px) {
+  .header__link_complain {
+    margin: 25px auto 0 0;
+    align-self: flex-start;
+  }
+}
