--- a/blocks/header/__list/header__list.css
+++ b/blocks/header/__list/header__list.css
@@ -4,3 +4,9 @@
   display: flex;
   padding: 0;
 }
+
+@media screen and (max-width: 767px) {
+  .header__list {
+    justify-content: space-between;
+  }
+}
