--- a/blocks/intro/__image/intro__image.css
+++ b/blocks/intro/__image/intro__image.css
@@ -1,8 +1,27 @@
 .intro__image {
   background-image: url(../../../images/intro-image.jpeg);
-  min-width: 356px;
-  min-height: 356px;
+  min-width: 360px;
+  min-height: 360px;
   margin-top: 0;
   background-size: cover;
   margin-right: 157px;
 }
+
+@media screen and (max-width: 1023px) {
+  .intro__image {
+      margin-right: 66px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .intro__image {
+    margin: 15px auto 0 auto;
+  }
+}
+@media screen and (max-width: 350px) {
+  .intro__image {
+      min-width: 320px;
+    min-height: 320px;
+  }
+}
+
