--- a/blocks/grid-box/__content/grid-box__content.css
+++ b/blocks/grid-box/__content/grid-box__content.css
@@ -13,9 +13,11 @@
       margin-right: 50px;
       max-width: 430px;
   }
+}
 
-  @media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .grid-box__content {
     margin: auto;
     max-width: 360px;
   }
+}
