--- a/blocks/grid-box/__content/grid-box__content.css
+++ b/blocks/grid-box/__content/grid-box__content.css
@@ -1,7 +1,7 @@
 .grid-box__content {
-    max-width: 386px;
-    margin-left: 80px;
-    align-self: start;
+    max-width: 100%;
+    padding-top: 66px;
+    padding-left: 80px;
 }
 
 @media screen and (max-width: 767px) {
