--- a/blocks/grid-box/__image/grid-box__image.css
+++ b/blocks/grid-box/__image/grid-box__image.css
@@ -1,7 +1,13 @@
 .grid-box__image {
     margin:0 auto;
-    max-width:100%;
-    max-height: 100%;
+    min-width:638px;
+    max-height: 580px;
     object-fit: cover;
 }
 
+@media screen and (max-width: 1279px) {
+    .grid-box__image {
+        min-width:515px;
+        max-height: 380px;
+    }
+}
