начата работа над адаптивом блока form

--- a/blocks/form/__input/_large/form__input_large.css
+++ b/blocks/form/__input/_large/form__input_large.css
@@ -1,5 +1,5 @@
 .form__input_large {
-  margin: 20px auto 0 70px;
+  margin: 20px 0 0 66px;
   width: 350px;
   height: 100px;
   line-height: 27px;
