--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -1,6 +1,6 @@
 .form__title {
   font-size: 37px;
   max-width: 300px;
-  margin: 135px auto 0 66px;
+  margin: 0 0 0 66px;
   letter-spacing: -1px
 }
