--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -2,3 +2,19 @@
   background-color:whitesmoke;
   display: flex;
 }
+
+@media screen and (max-width: 1279px) {
+  .form {
+  
+  }  
+}
+@media screen and (max-width: 1279px) {
+  .form {
+  
+  }  
+}
+@media screen and (max-width: 1279px) {
+  .form {
+  
+  }  
+}
